# SmartCalc

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  Makefile  main.cc
src/build-CalculatorUI-Desktop-Debug/: Makefile  moc_controller.cpp  moc_graph.cpp  moc_mainwindow.cpp  moc_qcustomplot.cpp  ui_graph.h  ui_mainwindow.h
src/controller/: controller.cc  controller.h
src/model/: calculator.cc  calculator.h  credit.cc  credit.h  parser.cc  parser.h
src/tests/: test.cc
src/view/: CalculatorUI.pro  calculator.pro  creditcalculator.cc  creditcalculator.cpp  creditcalculator.h  creditcalculator.ui  graph.cc  graph.h  graph.ui  main.cc  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cc
src/view/include/: creditcalculator.h  graph.h  mainwindow.h
src/view/ui/: creditcalculator.ui  graph.ui  mainwindow.ui
tests/: CMakeLists.txt  test.cc
